src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <formula>IF( NOT(ISNULL(Due_Date__c)), 


IF(Today()-Due_Date__c&lt;=30, &apos;0-30&apos;, 

 IF(Today()-Due_Date__c&gt;30  &amp;&amp; Today()-Due_Date__c&lt;=60, &apos;31-60&apos;, 

 IF(Today()-Due_Date__c&gt;60  &amp;&amp; Today()-Due_Date__c&lt;=90, &apos;61-90&apos;, 
 
IF(Today()-Due_Date__c&gt;90  &amp;&amp; Today()-Due_Date__c&lt;=120, &apos;91-120&apos;, &apos;&gt;121&apos;) 

) 

) 

)
, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding (Days)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <formula>Amount__c  -  Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBCreated_Date__c</fullName>
        <label>QBCreated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QB_Id__c</fullName>
        <label>QB Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Balance__c =0 ,&apos;Paid&apos;,
IF(Balance__c&gt;0 &amp;&amp; Balance__c&lt;Amount__c, &apos;Partial&apos;,
IF(Today()-Due_Date__c&gt;0, &apos;Overdue&apos;,  &apos;Open&apos;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
</CustomObject>